classDiagram
  direction LR
  class Auth {
    <<middleware>>
    +checkRole(roles)
    +usuario()
    +rol()
    +esAdministrador()
    +esSuperAdministrador()
  }
  class Usuario {
    +listar()
    +crear()
    +actualizar()
    +guardarTokenReset()
    +actualizarPassword()
  }
  class Producto {
    +listar()
    +buscar()
    +obtenerPorCodigo()
    +stockBajo()
  }
  class Venta {
    +registrar(items datos)
    +anular(id motivo usuario)
    +detalle(id)
  }
  class Inventario {
    +registrarEntrada()
    +registrarSalida()
    +registrarAjuste()
    +kardex()
  }
  class Reporte {
    +indicadores()
    +ventasPorDia()
    +resumenRango()
  }
  class Backup {
    +generar()
    +listar()
    +aplicarRetencion()
  }
  class Conexion {
    +conectar() PDO
  }
  Auth ..> Usuario : sesión y roles
  Venta --> Producto : valida precio y stock
  Venta ..> Inventario : crea salida
  Reporte ..> Venta : consolida ventas
  Backup ..> Conexion : exporta datos
  Usuario ..> Conexion
  Producto ..> Conexion
  Venta ..> Conexion
  Inventario ..> Conexion
